Ensure search bar button doesn't wrap text
The search bar button text in the Korean translated rendered the text over two
lines. To force it to render in one single line, the CSS is corrected.

--- a/frontend-service/src/navbar/navbar.scss
+++ b/frontend-service/src/navbar/navbar.scss
@@ -96,6 +96,7 @@
   border-radius: 0;
   border-width: 0;
   padding: .5rem 1rem;
+  white-space: nowrap;
 
   &:hover {
     color: $white;
